@@ -81,6 +81,9 @@
 	Fixed running tests with musl libc.  Thanks to Henrik Holst (a.k.a.
 	hholst80).
 
+	Fixed IPC payloads larger than 8155 bytes.  Patch by Marcin
+	Kurczewski (a.k.a. rr-).
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
